# anchor-program-id-selection

./: Anchor.toml  README.md
programs/program-id-selection/: Cargo.toml  build.rs
programs/program-id-selection/src/: lib.rs
tests/: program-id-selection.ts
