[package]
name = "program-id-selection"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "program_id_selection"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
localnet = []



[dependencies]
anchor-lang = "0.19.0"

[build-dependencies]
serde_json = "1.0"
ed25519-dalek = "1.0.1"
base58 = "0.2.0"
